--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Ulaş AÇIKEL
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Cyber Security Enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -19,16 +19,16 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: ulasacikel@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: LazyHands/
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  twitter: 
+  stackoverflow: /users/81937/lazyhands
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
